syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "pkg/api/types;types";

// MicroVM represents a microvm machine that is created via a provider.
message MicroVM {
  int32 version = 1;
  // Spec is the specification of the microvm.
  MicroVMSpec spec = 2;
}

// MicroVMSpec represents the specification for a microvm.
message MicroVMSpec {
  // ID is the identifier of the microvm.
  // If this empty at creation time a ID will be automatically generated.
  string id = 1;

  // VCPU specifies how many vcpu the machine will be allocated.
  int32 vcpu = 2;

  // MemoryInMb is the amount of memory in megabytes that the machine will be allocated.
  int32 memory_in_mb = 3;

  // Kernel is the details of the kernel to use .
  string kernel_path = 4;

  // RootVolume specifies the root volume mount for the MicroVM.
  string rootfs_path = 5;

  // HostNetDev is the device to use for passing traffic through the TAP device
  string HostNetDev = 6;

  // MAC address of the guest interface
  string GuestMac = 7;

  // CreatedAt indicates the time the microvm was created at.
  google.protobuf.Timestamp created_at = 12;

  // UpdatedAt indicates the time the microvm was last updated.
  google.protobuf.Timestamp updated_at = 13;

  // DeletedAt indicates the time the microvm was marked as deleted.
  google.protobuf.Timestamp deleted_at = 14;

  // Provider allows you to specify the name of the microvm provider to use. If this isn't supplied
  // then the default provider will be used.
  optional string provider = 16;
}
